--- a/project/www/templates/form.html
+++ b/project/www/templates/form.html
@@ -39,7 +39,8 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="pass" class="col-sm-2 control-label">Date</label>
+				
+				<label for="date" class="col-sm-2 control-label">Date</label>
 				<div class="col-sm-10">
 					<input type="text" class="datepicker-here form-control" id="date" name="date" placeholder="Required" />
 				</div>
