--- a/project/www/templates/dyn_form_test.html
+++ b/project/www/templates/dyn_form_test.html
@@ -62,6 +62,7 @@
       </div>
       <div class="col-sm-10 form-group">
         <input type="text" class="form-control" id="name" name="name" onfocus="setTimeout(addInput, 1000);" placeholder="Click to add new field"/>
+		<label onClick="setTimeout(addInput, 1000);">Click to add new field</label>
       </div>
       <div class="form-group ">
         <button onclick="addField();" type="button" class="btn btn-success">Submit</button>
