added some empty handlers for deleting, editing and more information. fixed some bugs, added adititional classes for templates

--- a/project/www/templates/form_skeleton.html
+++ b/project/www/templates/form_skeleton.html
@@ -1,5 +1,4 @@
-<!--student_reports<!DOCTYPE html> -->
-<!DOCTYPE html>
+student_reports<!DOCTYPE html>
 <html>
 	<head>
 		<title>IU Reporter</title>
