--- a/project/www/resources/reporterlibrary.css
+++ b/project/www/resources/reporterlibrary.css
@@ -155,3 +155,25 @@ th.headerSortUp {
 th.headerSortDown {
 	background-image: url(../resources/img/desc.gif);
 }
+
+.bordered-lable {
+	border: 5px #ffcc66 solid;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-khtml-border-radius:10px;
+	border-radius: 10px;
+	padding: 5px;
+	width: 75%;
+  font-weight: normal;
+  font-size: 14pt;
+}
+
+.card-view {
+	border: 5px #ffcc66 solid;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-khtml-border-radius:10px;
+	border-radius: 10px;
+	padding: 5px;
+	width: 95%;
+}
